# libsnark-gpu

./: .gitignore  CMakeLists.txt  README.md
depend/libsnark/: CMakeLists.txt
depend/libsnark/depends/: CMakeLists.txt
depend/libsnark/depends/libff/libff/algebra/scalar_multiplication/: multiexp.tcc
depend/libsnark/libsnark/: CMakeLists.txt
depend/libsnark/libsnark/zk_proof_systems/ppzksnark/r1cs_gg_ppzksnark/: constants.cuh  cuda_common.h  device_arr.h  gpuec256.cu  gpuec256.h  r1cs_gg_ppzksnark.tcc  test.cu  test.h  timer.h  uint288.cu  uint288.h
src/: CMakeLists.txt  main.cu  password-circuit.hpp
